--- a/testlanding-main11.04/styles.css
+++ b/testlanding-main11.04/styles.css
@@ -308,3 +308,21 @@ nav a {
 .show-more-btn:hover {
     background-color: #4d4dd2;
 }
+
+
+
+/* Плавное появление */
+.fade-in {
+    animation: fadeIn 0.6s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
